--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header id="hero-section">
         <nav class="nav-header">
             <div class="nav-logo">
-                <img src="assets/images/luna-logo.png" alt="luna logo">
+                <a href="index.html"><img src="assets/images/luna-logo.png" alt="luna logo"></a>
             </div>
             <ul class="nav-menu-list">
                 <li><a href="index.html">Home</a></li>
